--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -181,7 +181,26 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels above which probabilities are more likely than not, likely, very likely, and virtually certain, respectively, as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as representing 'as likely as not', encompassing probabilities slightly above even (50%-66%). <!-- CH omit: While DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009] provides draft risk categories, with ~50% described as neutral, 50-75% described as 'moderately high', and "75%-95% as 'high', these pertain to specifically to preventable declines and may not be relevant for LRP estimation. -->We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that minimum.  Instead, we demonstrate LRPs under various choices of probability levels. Although LRPs are intended to be identified by Science to represent the best scientific estimate of the level below which serious harm is expected to occur [@dfoScienceAdvicePrecautionary2021] and without necessarily introducing additional precaution under uncertainty,<!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....--> there is no scientific basis to choose one probability over others. We distinguish the biological basis of serious harm (any one CU having Red status) from the probability of this occurring, which implies a decision about risk tolerance.
+An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels above which probabilities are more likely than not, likely, very likely, and virtually certain, respectively, as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010] (Table \@ref(tab:LikelihoodsIPCC)). @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as representing 'as likely as not', encompassing probabilities slightly above even (50%-66%). <!-- CH omit: While DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009] provides draft risk categories, with ~50% described as neutral, 50-75% described as 'moderately high', and "75%-95% as 'high', these pertain to specifically to preventable declines and may not be relevant for LRP estimation. -->An additional consideration in this step is the probability threshold for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50% probability threshold of one or more CUs having Red status is not directly analogous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm.
+
+We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that minimum.  Instead, we demonstrate LRPs under various choices of probability levels. Although LRPs are intended to be identified by Science to represent the best scientific estimate of the level below which serious harm is expected to occur [@dfoScienceAdvicePrecautionary2021] and without necessarily introducing additional precaution under uncertainty,<!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....--> there is no scientific basis to choose one probability over others. We distinguish the biological basis of serious harm (any one CU having Red status) from the probability of this occurring, which implies a decision about risk tolerance.
+
+
+\renewcommand*{\arraystretch}{1.6}
+\begin{longtable}[]{p{3.7cm} p{6.3cm}}
+\caption{Likelihood definitions adapted from the Intergovernmental Panel on Climate Change.}\\
+\hline
+Probability & Definition \\ 
+\hline
+\endhead
+$>$ 50\%  &  more likely than not that all CUs are above their lower benchmark\\
+$>$ 66\%  &  likely that all CUs are above their lower benchmark\\
+$>$ 90\%  &  very likely that all CUs are above their lower benchmark\\
+$>$ 99\%  &  virtually certain that all CUs are above their lower benchmark\\
+\hline
+(\#tab:LikelihoodsIPCC)
+\end{longtable}
+
 
 <!-- 
 Also, based on the IUCN probability categories in case studies paper section 2.3, wouldn't we at least recommend that a probability over 50% be chosen, since 50% is 'as likely as not'? Wouldn't the precautionary principle lead us to recommend at least something in the 'likely' category >66%? This would be informed by the precautionary approach, and http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf.  I find it hard to justify the statement that there is no scientific basis to choose one probability over the others, since we have other guidance to go on. Additionally, the idea that the LRP should be above the level where serious harm is occurring makes me think that something at least in the likely category, if not the 90% very likely category, be recommended.
